# Multimodal_Agent

./: .gitignore  README.md  config.py  main.py  pinocchio_system_prompt.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EVALUATION_REPORT.md
examples/: README.md  agent_graph.py  basic_chat.py  planning_react.py  provider_presets.py  rag_knowledge.py  sandbox_execution.py  team_collaboration.py  tracing_observability.py
pinocchio/: __init__.py  orchestrator.py  tools.py
pinocchio/agents/: __init__.py  base_agent.py  evaluation_agent.py  execution_agent.py  learning_agent.py  meta_reflection_agent.py  perception_agent.py  strategy_agent.py  unified_agent.py
pinocchio/collaboration/: __init__.py  team.py
pinocchio/graph/: __init__.py  agent_graph.py
pinocchio/mcp/: __init__.py  mcp_client.py
pinocchio/memory/: __init__.py  episodic_memory.py  memory_manager.py  procedural_memory.py  semantic_memory.py  working_memory.py
pinocchio/models/: __init__.py  enums.py  schemas.py
pinocchio/multimodal/: __init__.py  audio_processor.py  video_processor.py
pinocchio/planning/: __init__.py  planner.py  react.py
pinocchio/rag/: __init__.py  document_store.py
pinocchio/sandbox/: __init__.py  code_sandbox.py
pinocchio/tracing/: __init__.py  tracer.py
pinocchio/utils/: __init__.py  context_manager.py  conversation_store.py  input_guard.py  llm_client.py  logger.py  output_guard.py  response_cache.py
scripts/: generate_demo_video.py
tests/: conftest.py  test_agents.py  test_async.py  test_audit_fixes.py  test_cognitive_loop.py  test_collaboration.py  test_context_manager.py  test_conversation_store.py  test_dual_axis_memory.py  test_embedding.py  test_graph.py  test_improvements.py  test_input_guard.py  test_integration.py  test_llm_edge_cases.py  test_mcp.py  test_memory.py  test_multimodal.py  test_orchestrator_deep.py  test_output_guard.py  test_parametrized.py  test_planning.py  test_rag.py  test_resource_coverage.py  test_response_cache.py  test_robustness.py  test_sandbox.py  test_session_management.py  test_streaming.py  test_stress_integration.py  test_tools.py  test_tracing.py  test_utils.py  test_video_coverage.py  test_web.py
web/: __init__.py  app.py
web/static/: index.html
