[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinocchio-agent"
version = "0.3.0"
description = "Pinocchio — 多模态自我进化智能体 / Multimodal Self-Evolving Agent with 6-phase cognitive loop, dual-axis memory, and tool-calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jiangsheng Yu", email = "yujiangsheng@users.noreply.github.com" }]
keywords = [
    "agent",
    "multimodal",
    "self-evolving",
    "cognitive-loop",
    "LLM",
    "tool-calling",
    "streaming",
    "embedding",
    "memory",
    "prompt-injection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.scripts]
pinocchio = "main:main"

[project.urls]
Homepage = "https://github.com/yujiangsheng/Multimodal_Agent"
Documentation = "https://github.com/yujiangsheng/Multimodal_Agent/blob/main/docs/ARCHITECTURE.md"
Repository = "https://github.com/yujiangsheng/Multimodal_Agent.git"
Issues = "https://github.com/yujiangsheng/Multimodal_Agent/issues"
Changelog = "https://github.com/yujiangsheng/Multimodal_Agent/blob/main/docs/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pinocchio*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring a running LLM server",
]
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["pinocchio"]
